--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "peerDependencies": {
     "react": "^16.0.0-alpha.6",
-    "react-native": "^0.43.4"
+    "react-native": "^0.43.4",
+    "prop-types": "*"
   },
   "devDependencies": {
     "babel": "^6.5.2",
